{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 28,
  "lineage": "c64b95d3-6360-b6a4-9b2f-7839bb7bd961",
  "resources": [
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloud-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060643377c172cbec",
            "domain": "vpc",
            "id": "eipalloc-060643377c172cbec",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-42-177-196.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.177.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloud-eip"
            },
            "tags_all": {
              "Name": "cloud-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:369399351045:instance/i-0fe3bb1ae80867738",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe3bb1ae80867738",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newsshkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0152156c17809f904",
            "private_dns": "ip-10-0-1-133.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-35-177-30-16.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.30.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-086f20b699ca4b6f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c9c3178ae2dc510",
            "tags": {
              "name": "server1-1"
            },
            "tags_all": {
              "name": "server1-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007d03d4935d34aad"
            ]
          },
          "dependencies": [
            "module.module-vpc.aws_subnet.web-public-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:369399351045:instance/i-06d552c543764b767",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d552c543764b767",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newsshkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d0bd2d3804174c0",
            "private_dns": "ip-10-0-1-39.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-3-10-224-104.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.224.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099162e9728e11573",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c9c3178ae2dc510",
            "tags": {
              "name": "server1-2"
            },
            "tags_all": {
              "name": "server1-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007d03d4935d34aad"
            ]
          },
          "dependencies": [
            "module.module-vpc.aws_subnet.web-public-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:369399351045:instance/i-0762c20fb4ecd9eae",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0762c20fb4ecd9eae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newsshkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08973f7734f349f83",
            "private_dns": "ip-10-0-3-193.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.193",
            "public_dns": "ec2-35-177-62-7.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.62.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08a8f0fd9b13ca020",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d796f77750e0cf1",
            "tags": {
              "name": "web1-1"
            },
            "tags_all": {
              "name": "web1-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fae036507a1523d1"
            ]
          },
          "dependencies": [
            "module.module-vpc.aws_security_group.cloudrock-sg1",
            "module.module-vpc.aws_subnet.app-private-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:369399351045:instance/i-03288787c766f071d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03288787c766f071d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newsshkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c43b03cd4c6257b5",
            "private_dns": "ip-10-0-3-110.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.110",
            "public_dns": "ec2-3-8-2-27.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.2.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081609f3bc8f5d64f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d796f77750e0cf1",
            "tags": {
              "name": "web1-2"
            },
            "tags_all": {
              "name": "web1-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fae036507a1523d1"
            ]
          },
          "dependencies": [
            "module.module-vpc.aws_security_group.cloudrock-sg1",
            "module.module-vpc.aws_subnet.app-private-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-cloud-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:internet-gateway/igw-0206b1c89fc6a12cc",
            "id": "igw-0206b1c89fc6a12cc",
            "owner_id": "369399351045",
            "tags": {
              "Name": "igw-cloud-vpc"
            },
            "tags_all": {
              "Name": "igw-cloud-vpc"
            },
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloud-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060643377c172cbec",
            "connectivity_type": "public",
            "id": "nat-0a6b6a4dd2f56cfaa",
            "network_interface_id": "eni-077dd0c3e3636681c",
            "private_ip": "10.0.1.95",
            "public_ip": "13.42.177.196",
            "subnet_id": "subnet-09c9c3178ae2dc510",
            "tags": {
              "Name": "cloud-nat-gw"
            },
            "tags_all": {
              "Name": "cloud-nat-gw"
            }
          },
          "dependencies": [
            "module.module-vpc.aws_eip.cloud-eip",
            "module.module-vpc.aws_subnet.web-public-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:route-table/rtb-0b1d8fb9112894b1b",
            "id": "rtb-0b1d8fb9112894b1b",
            "owner_id": "369399351045",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-private-route"
            },
            "tags_all": {
              "Name": "app-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-private-route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:route-table/rtb-00e4b76af6b1fd59e",
            "id": "rtb-00e4b76af6b1fd59e",
            "owner_id": "369399351045",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a6b6a4dd2f56cfaa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_eip.cloud-eip",
            "module.module-vpc.aws_nat_gateway.cloud-nat-gw",
            "module.module-vpc.aws_subnet.web-public-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:route-table/rtb-091ff9108f448ff54",
            "id": "rtb-091ff9108f448ff54",
            "owner_id": "369399351045",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web-public-route"
            },
            "tags_all": {
              "Name": "web-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-sub1-priv-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b93b3712a211329",
            "route_table_id": "rtb-0b1d8fb9112894b1b",
            "subnet_id": "subnet-04d796f77750e0cf1"
          },
          "dependencies": [
            "module.module-vpc.aws_route_table.app-private-route",
            "module.module-vpc.aws_subnet.app-private-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-sub2-priv-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060bf6ba70e06d814",
            "route_table_id": "rtb-0b1d8fb9112894b1b",
            "subnet_id": "subnet-0435ee0b6433a7fe9"
          },
          "dependencies": [
            "module.module-vpc.aws_route_table.app-private-route",
            "module.module-vpc.aws_subnet.app-private-subnet2-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-pub-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0206b1c89fc6a12cc",
            "id": "rtbassoc-076fc68b30cd827ac",
            "route_table_id": "rtb-091ff9108f448ff54"
          },
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.igw-cloud-vpc",
            "module.module-vpc.aws_route_table.web-public-route",
            "module.module-vpc.aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-sub1-pub-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bc776905979f4cf",
            "route_table_id": "rtb-091ff9108f448ff54",
            "subnet_id": "subnet-09c9c3178ae2dc510"
          },
          "dependencies": [
            "module.module-vpc.aws_route_table.web-public-route",
            "module.module-vpc.aws_subnet.web-public-subnet1-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-sub2-pub-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002e8664e145b96a2",
            "route_table_id": "rtb-091ff9108f448ff54",
            "subnet_id": "subnet-003282446ae36f110"
          },
          "dependencies": [
            "module.module-vpc.aws_route_table.web-public-route",
            "module.module-vpc.aws_subnet.web-public-subnet2-cidr_block",
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudrock-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:security-group/sg-0fae036507a1523d1",
            "description": "Allow HTTP and SSH traffic via Terraform 80",
            "egress": [],
            "id": "sg-0fae036507a1523d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230303173356940300000003",
            "name_prefix": "terraform-",
            "owner_id": "369399351045",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudrock-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:security-group/sg-0e6b61fa7f7ffed90",
            "description": "Allow HTTP and SSH traffic via Terraform 22",
            "egress": [],
            "id": "sg-0e6b61fa7f7ffed90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230303173356939400000002",
            "name_prefix": "terraform-",
            "owner_id": "369399351045",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudrock-sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:security-group/sg-037d90cd0ee14f172",
            "description": "Allow HTTP and SSH traffic via Terraform 0",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037d90cd0ee14f172",
            "ingress": [],
            "name": "terraform-20230303173345841200000001",
            "name_prefix": "terraform-",
            "owner_id": "369399351045",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c731dc8a5e2fc6a6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudrock-sg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:security-group/sg-02e030c0811e3d13a",
            "description": "enable mysql access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e030c0811e3d13a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fae036507a1523d1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql database secgrp",
            "name_prefix": "",
            "owner_id": "369399351045",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql-database-secgrp"
            },
            "tags_all": {
              "Name": "mysql-database-secgrp"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_security_group.cloudrock-sg1",
            "module.module-vpc.aws_vpc.cloudrock-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-subnet1-cidr_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:subnet/subnet-04d796f77750e0cf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d796f77750e0cf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "369399351045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet1"
            },
            "tags_all": {
              "Name": "app-private-subnet1"
            },
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-subnet2-cidr_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:subnet/subnet-0435ee0b6433a7fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0435ee0b6433a7fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "369399351045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet2"
            },
            "tags_all": {
              "Name": "app-private-subnet2"
            },
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-public-subnet1-cidr_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:subnet/subnet-09c9c3178ae2dc510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c9c3178ae2dc510",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "369399351045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-public-subnet1"
            },
            "tags_all": {
              "Name": "web-public-subnet1"
            },
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-public-subnet2-cidr_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:subnet/subnet-003282446ae36f110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003282446ae36f110",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "369399351045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-public-subnet2"
            },
            "tags_all": {
              "Name": "web-public-subnet2"
            },
            "vpc_id": "vpc-00cdcd53ade4352d1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.cloudrock-vpc",
            "module.module-vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudrock-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:vpc/vpc-00cdcd53ade4352d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8220ecf6cd7a273",
            "default_route_table_id": "rtb-02f3c97d466316949",
            "default_security_group_id": "sg-007d03d4935d34aad",
            "dhcp_options_id": "dopt-0524fd0cb1f7bbf60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00cdcd53ade4352d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f3c97d466316949",
            "owner_id": "369399351045",
            "tags": {
              "Name": "Tenacity"
            },
            "tags_all": {
              "Name": "Tenacity"
            }
          }
        }
      ]
    }
  ]
}